# COMP0023-CW2

./: B3-output.txt  README.md  pyproject.toml
simulator/: simulator.py
simulator/lib/: egp.py
stage3/: stage3-answers.txt  stage3-questions.txt
