[project]
name = "23008102"
version = "0.1.0"
description = ""
authors = [
    {name = "365614269",email = "365614269@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx (>=3.6,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
